--- a/03_classification.ipynb
+++ b/03_classification.ipynb
@@ -111,8 +111,11 @@
         "# Common imports\n",
         "import numpy as np\n",
         "import os\n",
-        "\n",
+        "import datetime\n",
         "# to make this notebook's output stable across runs\n",
+        "\n",
+        "t_begin =datetime.datetime.now()\n",
+        "\n",
         "np.random.seed(42)\n",
         "\n",
         "# To plot pretty figures\n",
@@ -162,7 +165,7 @@
       },
       "source": [
         "from sklearn.datasets import fetch_openml\n",
-        "import datetime \n",
+        "\n",
         "t0 = datetime.datetime.now()\n",
         "mnist = fetch_openml('mnist_784', version=1)\n",
         "mnist.keys()\n",
@@ -2746,6 +2749,20 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rIJXyJVQMMif",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "t_middle = datetime.datetime.now()\n",
+        "print( \"time used; \",  t_middle - t_begin)"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
