--- a/19_training_and_deploying_at_scale.ipynb
+++ b/19_training_and_deploying_at_scale.ipynb
@@ -63,7 +63,7 @@
     "from tensorflow import keras\n",
     "assert tf.__version__ >= \"2.0\"\n",
     "\n",
-    "if not tf.config.list_physical_devices('GPU'):\n",
+    "if not tf.config.experimental.list_physical_devices('GPU'):\n",
     "    print(\"No GPU was detected. CNNs can be very slow without a GPU.\")\n",
     "    if IS_COLAB:\n",
     "        print(\"Go to Runtime > Change runtime and select a GPU hardware accelerator.\")\n",
