changed import urllib to solve attribute problems

--- a/02_end_to_end_machine_learning_project.ipynb
+++ b/02_end_to_end_machine_learning_project.ipynb
@@ -95,7 +95,7 @@
    "source": [
     "import os\n",
     "import tarfile\n",
-    "import urllib\n",
+    "from urllib import request\n",
     "\n",
     "DOWNLOAD_ROOT = \"https://raw.githubusercontent.com/ageron/handson-ml2/master/\"\n",
     "HOUSING_PATH = os.path.join(\"datasets\", \"housing\")\n",
@@ -105,7 +105,7 @@
     "    if not os.path.isdir(housing_path):\n",
     "        os.makedirs(housing_path)\n",
     "    tgz_path = os.path.join(housing_path, \"housing.tgz\")\n",
-    "    urllib.request.urlretrieve(housing_url, tgz_path)\n",
+    "    request.urlretrieve(housing_url, tgz_path)\n",
     "    housing_tgz = tarfile.open(tgz_path)\n",
     "    housing_tgz.extractall(path=housing_path)\n",
     "    housing_tgz.close()"
@@ -6088,7 +6088,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   },
   "nav_menu": {
    "height": "279px",
