--- a/08_dimensionality_reduction.ipynb
+++ b/08_dimensionality_reduction.ipynb
@@ -1570,7 +1570,7 @@
     "\n",
     "for n_components in (2, 10, 154):\n",
     "    print(\"n_components =\", n_components)\n",
-    "    regular_pca = PCA(n_components=n_components)\n",
+    "    regular_pca = PCA(n_components=n_components, svd_solver=\"full\")\n",
     "    inc_pca = IncrementalPCA(n_components=n_components, batch_size=500)\n",
     "    rnd_pca = PCA(n_components=n_components, random_state=42, svd_solver=\"randomized\")\n",
     "\n",
@@ -1627,7 +1627,7 @@
     "    pca.fit(X)\n",
     "    t2 = time.time()\n",
     "    times_rpca.append(t2 - t1)\n",
-    "    pca = PCA(n_components = 2)\n",
+    "    pca = PCA(n_components = 2, svd_solver=\"full\")\n",
     "    t1 = time.time()\n",
     "    pca.fit(X)\n",
     "    t2 = time.time()\n",
@@ -1689,7 +1689,7 @@
     "    pca.fit(X)\n",
     "    t2 = time.time()\n",
     "    times_rpca.append(t2 - t1)\n",
-    "    pca = PCA(n_components = 2)\n",
+    "    pca = PCA(n_components = 2, svd_solver=\"full\")\n",
     "    t1 = time.time()\n",
     "    pca.fit(X)\n",
     "    t2 = time.time()\n",
