Small omission in exercise 10
The code that follows this introduction focuses on digits 2, 3 and 5.

--- a/08_dimensionality_reduction.ipynb
+++ b/08_dimensionality_reduction.ipynb
@@ -2612,7 +2612,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's focus on digits 3 and 5, which seem to overlap a lot."
+    "Let's focus on digits 2, 3 and 5, which seem to overlap a lot."
    ]
   },
   {
