--- a/08_dimensionality_reduction.ipynb
+++ b/08_dimensionality_reduction.ipynb
@@ -2735,7 +2735,7 @@
     "    plt.axis(\"off\")\n",
     "    ax = plt.gcf().gca()  # get current axes in current figure\n",
     "    for index, image_coord in enumerate(X_normalized):\n",
-    "        closest_distance = np.linalg.norm(np.array(neighbors) - image_coord, axis=1).min()\n",
+    "        closest_distance = np.linalg.norm(neighbors - image_coord, axis=1).min()\n",
     "        if closest_distance > min_distance:\n",
     "            neighbors = np.r_[neighbors, [image_coord]]\n",
     "            if images is None:\n",
