Remove unnecessary code
To make it clearer that the ys are not going to be used.

--- a/09_unsupervised_learning.ipynb
+++ b/09_unsupervised_learning.ipynb
@@ -1971,12 +1971,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X1, y1 = make_blobs(n_samples=1000, centers=((4, -4), (0, 0)), random_state=42)\n",
+    "X1, _ = make_blobs(n_samples=1000, centers=((4, -4), (0, 0)), random_state=42)\n",
     "X1 = X1.dot(np.array([[0.374, 0.95], [0.732, 0.598]]))\n",
-    "X2, y2 = make_blobs(n_samples=250, centers=1, random_state=42)\n",
+    "X2, _ = make_blobs(n_samples=250, centers=1, random_state=42)\n",
     "X2 = X2 + [6, -8]\n",
-    "X = np.r_[X1, X2]\n",
-    "y = np.r_[y1, y2]"
+    "X = np.r_[X1, X2]"
    ]
   },
   {
