Update computation result
In the Using Clustering for Preprocessing section, clustering beforehand now reduces the error by over 35%.

--- a/09_unsupervised_learning.ipynb
+++ b/09_unsupervised_learning.ipynb
@@ -2294,7 +2294,8 @@
     }
    ],
    "source": [
-    "log_reg.score(X_test, y_test)"
+    "log_reg_score = log_reg.score(X_test, y_test)\n",
+    "log_reg_score"
    ]
   },
   {
@@ -2360,7 +2361,8 @@
     }
    ],
    "source": [
-    "pipeline.score(X_test, y_test)"
+    "pipeline_score = pipeline.score(X_test, y_test)\n",
+    "pipeline_score"
    ]
   },
   {
@@ -2380,14 +2382,14 @@
     }
    ],
    "source": [
-    "1 - (1 - 0.977777) / (1 - 0.968888)"
+    "(pipeline_score - log_reg_score) / (1 - log_reg_score)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How about that? We reduced the error rate by over 28%! But we chose the number of clusters $k$ completely arbitrarily, we can surely do better. Since K-Means is just a preprocessing step in a classification pipeline, finding a good value for $k$ is much simpler than earlier: there's no need to perform silhouette analysis or minimize the inertia, the best value of $k$ is simply the one that results in the best classification performance."
+    "How about that? We reduced the error rate by over 35%! But we chose the number of clusters $k$ completely arbitrarily, we can surely do better. Since K-Means is just a preprocessing step in a classification pipeline, finding a good value for $k$ is much simpler than earlier: there's no need to perform silhouette analysis or minimize the inertia, the best value of $k$ is simply the one that results in the best classification performance."
    ]
   },
   {
