No need to reshape

--- a/09_unsupervised_learning.ipynb
+++ b/09_unsupervised_learning.ipynb
@@ -7570,7 +7570,7 @@
     "    plt.figure(figsize=(n_cols, n_rows * 1.1))\n",
     "    for index, (face, label) in enumerate(zip(faces, labels)):\n",
     "        plt.subplot(n_rows, n_cols, index + 1)\n",
-    "        plt.imshow(face.reshape(64, 64), cmap=\"gray\")\n",
+    "        plt.imshow(face, cmap=\"gray\")\n",
     "        plt.axis(\"off\")\n",
     "        plt.title(label)\n",
     "    plt.show()\n",
