Correction to reshape changes

--- a/09_unsupervised_learning.ipynb
+++ b/09_unsupervised_learning.ipynb
@@ -7566,6 +7566,7 @@
    ],
    "source": [
     "def plot_faces(faces, labels, n_cols=5):\n",
+    "    faces = faces.reshape(-1, 64, 64)\n",
     "    n_rows = (len(faces) - 1) // n_cols + 1\n",
     "    plt.figure(figsize=(n_cols, n_rows * 1.1))\n",
     "    for index, (face, label) in enumerate(zip(faces, labels)):\n",
@@ -7578,7 +7579,7 @@
     "for cluster_id in np.unique(best_model.labels_):\n",
     "    print(\"Cluster\", cluster_id)\n",
     "    in_cluster = best_model.labels_==cluster_id\n",
-    "    faces = X_train[in_cluster].reshape(-1, 64, 64)\n",
+    "    faces = X_train[in_cluster]\n",
     "    labels = y_train[in_cluster]\n",
     "    plot_faces(faces, labels)"
    ]
