Change argument passed to plot_faces

--- a/09_unsupervised_learning.ipynb
+++ b/09_unsupervised_learning.ipynb
@@ -8091,7 +8091,7 @@
     }
    ],
    "source": [
-    "plot_faces(X_bad_faces, y_gen_faces)"
+    "plot_faces(X_bad_faces, y_bad)"
    ]
   },
   {
@@ -8114,7 +8114,7 @@
    ],
    "source": [
     "X_bad_faces_reconstructed = pca.inverse_transform(X_bad_faces_pca)\n",
-    "plot_faces(X_bad_faces_reconstructed, y_gen_faces)"
+    "plot_faces(X_bad_faces_reconstructed, y_bad)"
    ]
   },
   {
