--- a/18_reinforcement_learning.ipynb
+++ b/18_reinforcement_learning.ipynb
@@ -2382,7 +2382,7 @@
     }
    ],
    "source": [
-    "env.step(1) # Fire"
+    "env.step(np.array(1)) # Fire"
    ]
   },
   {
@@ -2965,9 +2965,9 @@
    "source": [
     "env.seed(42)\n",
     "env.reset()\n",
-    "time_step = env.step(1) # FIRE\n",
+    "time_step = env.step(np.array(1)) # FIRE\n",
     "for _ in range(4):\n",
-    "    time_step = env.step(3) # LEFT"
+    "    time_step = env.step(np.array(3)) # LEFT"
    ]
   },
   {
@@ -3733,7 +3733,7 @@
     "    lives = tf_env.pyenv.envs[0].ale.lives()\n",
     "    if prev_lives != lives:\n",
     "        tf_env.reset()\n",
-    "        tf_env.pyenv.envs[0].step(1)\n",
+    "        tf_env.pyenv.envs[0].step(np.array(1))\n",
     "        prev_lives = lives\n",
     "\n",
     "watch_driver = DynamicStepDriver(\n",
