Add bayesian hyperparam optimization

--- a/02_end_to_end_machine_learning_project.ipynb
+++ b/02_end_to_end_machine_learning_project.ipynb
@@ -4707,6 +4707,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from skopt import BayesSearchCV\n",
+    "from skopt.space import Categorical, Integer, Real\n",
+    "\n",
+    "search_spaces = {\n",
+    "    'n_estimators': Integer(1, 200),\n",
+    "    'max_features': Integer(1, 8)   \n",
+    "}\n",
+    "\n",
+    "forest_reg = RandomForestRegressor(random_state=42)\n",
+    "bayes_search = BayesSearchCV(forest_reg, search_spaces, n_iter=10, scoring='neg_mean_squared_error', cv=5,\\\n",
+    "                             random_state=42)\n",
+    "bayes_search.fit(housing_prepared, housing_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cvres = bayes_search.cv_results_\n",
+    "for mean_score, params in zip(cvres[\"mean_test_score\"], cvres[\"params\"]):\n",
+    "    print(np.sqrt(-mean_score), params)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 105,
    "metadata": {},
    "outputs": [
@@ -6088,7 +6119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.4"
   },
   "nav_menu": {
    "height": "279px",
