Modify boolean condition
If we actually want to start training after 50 episodes, like the book says (not after 51).

--- a/18_reinforcement_learning.ipynb
+++ b/18_reinforcement_learning.ipynb
@@ -1757,7 +1757,7 @@
     "        best_weights = model.get_weights() # Not shown\n",
     "        best_score = step # Not shown\n",
     "    print(\"\\rEpisode: {}, Steps: {}, eps: {:.3f}\".format(episode, step + 1, epsilon), end=\"\") # Not shown\n",
-    "    if episode > 50:\n",
+    "    if episode >= 50:\n",
     "        training_step(batch_size)\n",
     "\n",
     "model.set_weights(best_weights)"
@@ -1925,12 +1925,12 @@
     "        best_weights = model.get_weights()\n",
     "        best_score = step\n",
     "    print(\"\\rEpisode: {}, Steps: {}, eps: {:.3f}\".format(episode, step + 1, epsilon), end=\"\")\n",
-    "    if episode > 50:\n",
+    "    if episode >= 50:\n",
     "        training_step(batch_size)\n",
     "    if episode % 50 == 0:\n",
     "        target.set_weights(model.get_weights())\n",
     "    # Alternatively, you can do soft updates at each step:\n",
-    "    #if episode > 50:\n",
+    "    #if episode >= 50:\n",
     "        #target_weights = target.get_weights()\n",
     "        #online_weights = model.get_weights()\n",
     "        #for index in range(len(target_weights)):\n",
@@ -2101,7 +2101,7 @@
     "        best_weights = model.get_weights()\n",
     "        best_score = step\n",
     "    print(\"\\rEpisode: {}, Steps: {}, eps: {:.3f}\".format(episode, step + 1, epsilon), end=\"\")\n",
-    "    if episode > 50:\n",
+    "    if episode >= 50:\n",
     "        training_step(batch_size)\n",
     "    if episode % 200 == 0:\n",
     "        target.set_weights(model.get_weights())\n",
