Do not set weights before loop
The call target.set_weights(model.get_weights()) was actually duplicated at the beginning (once outside the loop, once with episode == 0).

--- a/18_reinforcement_learning.ipynb
+++ b/18_reinforcement_learning.ipynb
@@ -1849,8 +1849,7 @@
     "    keras.layers.Dense(n_outputs)\n",
     "])\n",
     "\n",
-    "target = keras.models.clone_model(model)\n",
-    "target.set_weights(model.get_weights())"
+    "target = keras.models.clone_model(model)"
    ]
   },
   {
@@ -1925,10 +1924,10 @@
     "        best_weights = model.get_weights()\n",
     "        best_score = step\n",
     "    print(\"\\rEpisode: {}, Steps: {}, eps: {:.3f}\".format(episode, step + 1, epsilon), end=\"\")\n",
-    "    if episode >= 50:\n",
-    "        training_step(batch_size)\n",
     "    if episode % 50 == 0:\n",
     "        target.set_weights(model.get_weights())\n",
+    "    if episode >= 50:\n",
+    "        training_step(batch_size)\n",
     "    # Alternatively, you can do soft updates at each step:\n",
     "    #if episode >= 50:\n",
     "        #target_weights = target.get_weights()\n",
@@ -2025,8 +2024,7 @@
     "Q_values = state_values + advantages\n",
     "model = keras.models.Model(inputs=[input_states], outputs=[Q_values])\n",
     "\n",
-    "target = keras.models.clone_model(model)\n",
-    "target.set_weights(model.get_weights())"
+    "target = keras.models.clone_model(model)"
    ]
   },
   {
@@ -2101,10 +2099,10 @@
     "        best_weights = model.get_weights()\n",
     "        best_score = step\n",
     "    print(\"\\rEpisode: {}, Steps: {}, eps: {:.3f}\".format(episode, step + 1, epsilon), end=\"\")\n",
-    "    if episode >= 50:\n",
-    "        training_step(batch_size)\n",
     "    if episode % 200 == 0:\n",
     "        target.set_weights(model.get_weights())\n",
+    "    if episode >= 50:\n",
+    "        training_step(batch_size)\n",
     "\n",
     "model.set_weights(best_weights)"
    ]
