Fixes Chapter 3 MNIST get data from X[0] error

--- a/03_classification.ipynb
+++ b/03_classification.ipynb
@@ -197,7 +197,7 @@
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "some_digit = X[0]\n",
+    "some_digit=np.array(X.iloc[0])\n",
     "some_digit_image = some_digit.reshape(28, 28)\n",
     "plt.imshow(some_digit_image, cmap=mpl.cm.binary)\n",
     "plt.axis(\"off\")\n",
@@ -4582,7 +4582,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.7.10"
   },
   "nav_menu": {},
   "toc": {
