Apply changes requested by ageron

--- a/18_reinforcement_learning.ipynb
+++ b/18_reinforcement_learning.ipynb
@@ -1849,7 +1849,8 @@
     "    keras.layers.Dense(n_outputs)\n",
     "])\n",
     "\n",
-    "target = keras.models.clone_model(model)"
+    "target = keras.models.clone_model(model)\n",
+    "target.set_weights(model.get_weights())"
    ]
   },
   {
@@ -1924,9 +1925,9 @@
     "        best_weights = model.get_weights()\n",
     "        best_score = step\n",
     "    print(\"\\rEpisode: {}, Steps: {}, eps: {:.3f}\".format(episode, step + 1, epsilon), end=\"\")\n",
-    "    if episode % 50 == 0:\n",
-    "        target.set_weights(model.get_weights())\n",
     "    if episode >= 50:\n",
+    "        if episode % 50 == 0:\n",
+    "            target.set_weights(model.get_weights())\n",
     "        training_step(batch_size)\n",
     "    # Alternatively, you can do soft updates at each step:\n",
     "    #if episode >= 50:\n",
@@ -2024,7 +2025,8 @@
     "Q_values = state_values + advantages\n",
     "model = keras.models.Model(inputs=[input_states], outputs=[Q_values])\n",
     "\n",
-    "target = keras.models.clone_model(model)"
+    "target = keras.models.clone_model(model)\n",
+    "target.set_weights(model.get_weights())"
    ]
   },
   {
@@ -2099,9 +2101,9 @@
     "        best_weights = model.get_weights()\n",
     "        best_score = step\n",
     "    print(\"\\rEpisode: {}, Steps: {}, eps: {:.3f}\".format(episode, step + 1, epsilon), end=\"\")\n",
-    "    if episode % 200 == 0:\n",
-    "        target.set_weights(model.get_weights())\n",
     "    if episode >= 50:\n",
+    "        if episode % 200 == 0:\n",
+    "            target.set_weights(model.get_weights())\n",
     "        training_step(batch_size)\n",
     "\n",
     "model.set_weights(best_weights)"
