Typo fix: how they works=>work

--- a/extra_autodiff.ipynb
+++ b/extra_autodiff.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_This notebook contains toy implementations of various autodiff techniques, to explain how they works._"
+    "_This notebook contains toy implementations of various autodiff techniques, to explain how they work._"
    ]
   },
   {
