substract=>subtract, fixes https://github.com/ageron/handson-ml/issues/623

--- a/math_linear_algebra.ipynb
+++ b/math_linear_algebra.ipynb
@@ -643,7 +643,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, substracting a vector is like adding the opposite vector."
+    "Finally, subtracting a vector is like adding the opposite vector."
    ]
   },
   {
