--- a/tools_pandas.ipynb
+++ b/tools_pandas.ipynb
@@ -5357,7 +5357,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you add a `Series` object to a `DataFrame` (or execute any other binary operation), pandas attempts to broadcast the operation to all *rows* in the `DataFrame`. This only works if the `Series` has the same size as the `DataFrame`s rows. For example, let's substract the `mean` of the `DataFrame` (a `Series` object) from the `DataFrame`:"
+    "If you add a `Series` object to a `DataFrame` (or execute any other binary operation), pandas attempts to broadcast the operation to all *rows* in the `DataFrame`. This only works if the `Series` has the same size as the `DataFrame`s rows. For example, let's subtract the `mean` of the `DataFrame` (a `Series` object) from the `DataFrame`:"
    ]
   },
   {
@@ -5441,7 +5441,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We substracted `7.75` from all September grades, `8.75` from October grades and `7.50` from November grades. It is equivalent to substracting this `DataFrame`:"
+    "We subtracted `7.75` from all September grades, `8.75` from October grades and `7.50` from November grades. It is equivalent to subtracting this `DataFrame`:"
    ]
   },
   {
@@ -5525,7 +5525,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you want to substract the global mean from every grade, here is one way to do it:"
+    "If you want to subtract the global mean from every grade, here is one way to do it:"
    ]
   },
   {
@@ -5604,7 +5604,7 @@
     }
    ],
    "source": [
-    "grades - grades.values.mean() # substracts the global mean (8.00) from all grades"
+    "grades - grades.values.mean() # subtracts the global mean (8.00) from all grades"
    ]
   },
   {
