Support running on Kaggle

--- a/03_classification.ipynb
+++ b/03_classification.ipynb
@@ -44,6 +44,10 @@
     "import sys\n",
     "assert sys.version_info >= (3, 5)\n",
     "\n",
+    "# Is this notebook running on Colab or Kaggle?\n",
+    "IS_COLAB = \"google.colab\" in sys.modules\n",
+    "IS_KAGGLE = \"kaggle_secrets\" in sys.modules\n",
+    "\n",
     "# Scikit-Learn ≥0.20 is required\n",
     "import sklearn\n",
     "assert sklearn.__version__ >= \"0.20\"\n",
@@ -4209,12 +4213,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# if running this notebook on Colab, we just pip install urlextract\n",
-    "try:\n",
-    "    import google.colab\n",
-    "    !pip install -q -U urlextract\n",
-    "except ImportError:\n",
-    "    pass # not running on Colab"
+    "# if running this notebook on Colab or Kaggle, we just pip install urlextract\n",
+    "if IS_COLAB or IS_KAGGLE:\n",
+    "    !pip install -q -U urlextract"
    ]
   },
   {
@@ -4595,7 +4596,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.10"
   },
   "nav_menu": {},
   "toc": {
