--- a/16_nlp_with_rnns_and_attention.ipynb
+++ b/16_nlp_with_rnns_and_attention.ipynb
@@ -57,18 +57,17 @@
     "import sys\n",
     "assert sys.version_info >= (3, 5)\n",
     "\n",
+    "# Is this notebook running on Colab or Kaggle?\n",
+    "IS_COLAB = \"google.colab\" in sys.modules\n",
+    "IS_KAGGLE = \"kaggle_secrets\" in sys.modules\n",
+    "\n",
+    "if IS_COLAB:\n",
+    "    !pip install -q -U tensorflow-addons\n",
+    "    !pip install -q -U transformers\n",
+    "\n",
     "# Scikit-Learn ≥0.20 is required\n",
     "import sklearn\n",
     "assert sklearn.__version__ >= \"0.20\"\n",
-    "\n",
-    "try:\n",
-    "    # %tensorflow_version only exists in Colab.\n",
-    "    %tensorflow_version 2.x\n",
-    "    !pip install -q -U tensorflow-addons\n",
-    "    !pip install -q -U transformers\n",
-    "    IS_COLAB = True\n",
-    "except Exception:\n",
-    "    IS_COLAB = False\n",
     "\n",
     "# TensorFlow ≥2.0 is required\n",
     "import tensorflow as tf\n",
@@ -79,6 +78,8 @@
     "    print(\"No GPU was detected. LSTMs and CNNs can be very slow without a GPU.\")\n",
     "    if IS_COLAB:\n",
     "        print(\"Go to Runtime > Change runtime and select a GPU hardware accelerator.\")\n",
+    "    if IS_KAGGLE:\n",
+    "        print(\"Go to Settings > Accelerator and select GPU.\")\n",
     "\n",
     "# Common imports\n",
     "import numpy as np\n",
@@ -4144,7 +4145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.10"
   },
   "nav_menu": {},
   "toc": {
