--- a/13_loading_and_preprocessing_data.ipynb
+++ b/13_loading_and_preprocessing_data.ipynb
@@ -4292,7 +4292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We get about 73.7% accuracy on the validation set after just the first epoch, but after that the model makes no significant progress. We will do better in Chapter 16. For now the point is just to perform efficient preprocessing using `tf.data` and Keras preprocessing layers."
+    "We get about 73.5% accuracy on the validation set after just the first epoch, but after that the model makes no significant progress. We will do better in Chapter 16. For now the point is just to perform efficient preprocessing using `tf.data` and Keras preprocessing layers."
    ]
   },
   {
@@ -4307,7 +4307,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To compute the mean embedding for each review, and multiply it by the square root of the number of words in that review, we will need a little function:"
+    "To compute the mean embedding for each review, and multiply it by the square root of the number of words in that review, we will need a little function. For each sentence, this function needs to compute $M \\times \\sqrt N$, where $M$ is the mean of all the word embeddings in the sentence (excluding padding tokens), and $N$ is the number of words in the sentence (also excluding padding tokens). We can rewrite $M$ as $\\dfrac{S}{N}$, where $S$ is the sum of all word embeddings (it does not matter whether or not we include the padding tokens in this sum, since their representation is a zero vector). So the function must return $M \\times \\sqrt N = \\dfrac{S}{N} \\times \\sqrt N = \\dfrac{S}{\\sqrt N \\times \\sqrt N} \\times \\sqrt N= \\dfrac{S}{\\sqrt N}$."
    ]
   },
   {
@@ -4319,8 +4319,8 @@
      "data": {
       "text/plain": [
        "<tf.Tensor: shape=(2, 3), dtype=float32, numpy=\n",
-       "array([[2.3570225, 3.2998314, 1.4142135],\n",
-       "       [2.       , 0.       , 0.       ]], dtype=float32)>"
+       "array([[3.535534 , 4.9497476, 2.1213205],\n",
+       "       [6.       , 0.       , 0.       ]], dtype=float32)>"
       ]
      },
      "execution_count": 154,
@@ -4333,7 +4333,7 @@
     "    not_pad = tf.math.count_nonzero(inputs, axis=-1)\n",
     "    n_words = tf.math.count_nonzero(not_pad, axis=-1, keepdims=True)    \n",
     "    sqrt_n_words = tf.math.sqrt(tf.cast(n_words, tf.float32))\n",
-    "    return tf.reduce_mean(inputs, axis=1) * sqrt_n_words\n",
+    "    return tf.reduce_sum(inputs, axis=1) / sqrt_n_words\n",
     "\n",
     "another_example = tf.constant([[[1., 2., 3.], [4., 5., 0.], [0., 0., 0.]],\n",
     "                               [[6., 0., 0.], [0., 0., 0.], [0., 0., 0.]]])\n",
@@ -4344,7 +4344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's check that this is correct. The first review contains 2 words (the last token is a zero vector, which represents the `<pad>` token). The second review contains 1 word. So we need to compute the mean embedding for each review, and multiply the first one by the square root of 2, and the second one by the square root of 1:"
+    "Let's check that this is correct. The first review contains 2 words (the last token is a zero vector, which represents the `<pad>` token). Let's compute the mean embedding for these 2 words, and multiply the result by the square root of 2:"
    ]
   },
   {
@@ -4355,9 +4355,7 @@
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: shape=(2, 3), dtype=float32, numpy=\n",
-       "array([[2.3570225, 3.2998314, 1.4142135],\n",
-       "       [2.       , 0.       , 0.       ]], dtype=float32)>"
+       "<tf.Tensor: shape=(1, 3), dtype=float32, numpy=array([[3.535534 , 4.9497476, 2.1213202]], dtype=float32)>"
       ]
      },
      "execution_count": 155,
@@ -4366,7 +4364,34 @@
     }
    ],
    "source": [
-    "tf.reduce_mean(another_example, axis=1) * tf.sqrt([[2.], [1.]])"
+    "tf.reduce_mean(another_example[0:1, :2], axis=1) * tf.sqrt(2.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looks good! Now let's check the second review, which contains just one word (we ignore the two padding tokens):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(1, 3), dtype=float32, numpy=array([[6., 0., 0.]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.reduce_mean(another_example[1:2, :1], axis=1) * tf.sqrt(1.)"
    ]
   },
   {
@@ -4378,7 +4403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4405,7 +4430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -4413,24 +4438,24 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "782/782 [==============================] - 3s 2ms/step - loss: 0.6075 - accuracy: 0.6560 - val_loss: 0.5227 - val_accuracy: 0.7375\n",
+      "782/782 [==============================] - 3s 2ms/step - loss: 0.6053 - accuracy: 0.6568 - val_loss: 0.5151 - val_accuracy: 0.7382\n",
       "Epoch 2/5\n",
-      "782/782 [==============================] - 2s 2ms/step - loss: 0.4888 - accuracy: 0.7571 - val_loss: 0.5043 - val_accuracy: 0.7471\n",
+      "782/782 [==============================] - 2s 2ms/step - loss: 0.4922 - accuracy: 0.7569 - val_loss: 0.5081 - val_accuracy: 0.7466\n",
       "Epoch 3/5\n",
-      "782/782 [==============================] - 3s 3ms/step - loss: 0.4871 - accuracy: 0.7609 - val_loss: 0.4978 - val_accuracy: 0.7474\n",
+      "782/782 [==============================] - 2s 2ms/step - loss: 0.4827 - accuracy: 0.7628 - val_loss: 0.4978 - val_accuracy: 0.7473\n",
       "Epoch 4/5\n",
-      "782/782 [==============================] - 3s 3ms/step - loss: 0.4812 - accuracy: 0.7608 - val_loss: 0.5021 - val_accuracy: 0.7451\n",
+      "782/782 [==============================] - 2s 2ms/step - loss: 0.4761 - accuracy: 0.7656 - val_loss: 0.4959 - val_accuracy: 0.7513\n",
       "Epoch 5/5\n",
-      "782/782 [==============================] - 3s 2ms/step - loss: 0.4729 - accuracy: 0.7661 - val_loss: 0.4975 - val_accuracy: 0.7481\n"
+      "782/782 [==============================] - 3s 2ms/step - loss: 0.4737 - accuracy: 0.7687 - val_loss: 0.4978 - val_accuracy: 0.7471\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7fd51535c210>"
+       "<tensorflow.python.keras.callbacks.History at 0x7f89584c3690>"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4457,7 +4482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4469,7 +4494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
