--- a/math_linear_algebra.ipynb
+++ b/math_linear_algebra.ipynb
@@ -19,6 +19,9 @@
     "  <td>\n",
     "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/ageron/handson-ml2/blob/master/math_linear_algebra.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
     "  </td>\n",
+    "  <td>\n",
+    "    <a target=\"_blank\" href=\"https://kaggle.com/kernels/welcome?src=https://github.com/ageron/handson-ml2/blob/master/math_linear_algebra.ipynb\"><img src=\"https://kaggle.com/static/images/open-in-kaggle.svg\" /></a>\n",
+    "  </td>\n",
     "</table>"
    ]
   },
@@ -4566,7 +4569,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.10"
   },
   "toc": {
    "toc_cell": false,
