--- a/index.ipynb
+++ b/index.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "<table align=\"left\">\n",
     "  <td>\n",
-    "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/ageron/handson-ml2/blob/master/index.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
+    "    <a href=\"https://colab.research.google.com/github/ageron/handson-ml2/blob/master/index.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
     "  </td>\n",
     "  <td>\n",
     "    <a target=\"_blank\" href=\"https://homl.info/kaggle/\"><img src=\"https://kaggle.com/static/images/open-in-kaggle.svg\" /></a>\n",
